Fix imageControl overlapping

--- a/frontend/src/css/viewports.css
+++ b/frontend/src/css/viewports.css
@@ -99,6 +99,7 @@
         position: sticky;
         top: 0;
         width: 100%;
+        z-index: 2;
     }
     #tabGroupsAndControls {
         position: absolute;
